# schnorr-sigma-protocol

./: Cargo.toml  README.md  public.txt
keys/5723-2538-1838-8829/: 5723-2538-1838-8829.json
src/: lib.rs  main.rs  protocol.rs  prover.rs  schnorr_protocol.rs  session.rs  user.rs  verifier.rs
users/: 123.json  1371-4414-7788-1441.json  1551-4856-1656-8983.json  2173-8316-6673-9888.json  2947-5982-3004-1652.json  3287-7477-6684-4674.json  4514-4261-9438-1053.json  4737-3790-6725-4182.json  5950-8756-4945-8324.json  6245-9358-1309-5623.json  7861-6055-5287-1212.json  8538-4668-2074-3392.json  9596-2910-9708-6413.json  9912-6757-4668-4027.json
